# avr-hal

arduino-hal/: Cargo.toml
avr-hal-generic/: Cargo.toml
avr-specs/: avr-attiny828.json
examples/arduino-nano/: Cargo.toml
examples/arduino-uno/: Cargo.toml
examples/atmega2560/: Cargo.toml
examples/nano168/: Cargo.toml
mcu/atmega-hal/: Cargo.toml
mcu/attiny-hal/: Cargo.toml
mcu/attiny-hal/src/: eeprom.rs  lib.rs  port.rs  usart.rs
