[package]
name = "atmega2560-examples"
version = "0.0.0"
authors = ["Rahix <rahix@rahix.de>", "Armandas Jarušauskas <jarusauskas@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
panic-halt = "1.0.0"
ufmt = "0.2.0"
nb = "1.1.0"
embedded-hal = "1.0"

[dependencies.avr-device]
git = "https://github.com/Rahix/avr-device.git"
rev = "7f027c287d1a72107563ccd9f92c85638906ca10"
features = ["rt"]

[dependencies.embedded-hal-v0]
version = "0.2.3"
package = "embedded-hal"

[dependencies.atmega-hal]
path = "../../mcu/atmega-hal/"
features = ["atmega2560"]
